--- a/index.html
+++ b/index.html
@@ -62,16 +62,16 @@
 				</div>
 			</section>
 			<section class="examples">
-				<div class="container examples-container">
-					<div class="examples-menu">
+				<div class="container ">
+					<div >
 						<ul class=" examples-navigation">
-							<li class="examples-navigation__item">
+							<li >
 								<a href="#"> <span>ROSTOV-ON-DON, ADMIRAL</span> </a>
 							</li>
-							<li class="examples-navigation__item">
+							<li >
 								<a href="#">SOCHI THIEVES</a>
 							</li>
-							<li class="examples-navigation__item">
+							<li>
 								<a href="#">ROSTOV-ON-DON PATRIOTIC</a>
 							</li>
 						</ul>
@@ -81,7 +81,8 @@
 								<p class="subtitle subtitle-examples">Only a small part of the work performed by our company
 									is presented <br> on the site. For 14 years on in the construction <br>
 									market we have made happy more than 1000 families </p>
-								<!------------вставить слайдер для мобилы----------------------------->
+								<!--slider for mobil-->
+								<div class="slider"><img src="" alt=""></div>
 								<!------------------------------grid надо почитать про них----------------------------->
 								<div class="grid-content">
 									<div class="grid-item">
@@ -157,7 +158,7 @@
 					</div>
 					<div class="types-content">
 						<div class="part part1">
-							<img class="part1-img" src=".//img/part1.jpg" alt="part1">
+							<img class="part-img" src=".//img/part1.jpg" alt="part1">
 							<div class="part-general">
 								<p class="title title-part">Redecorating </p>
 								<ul class="navigation part-navigation">
@@ -173,7 +174,7 @@
 							</div>
 						</div>
 						<div class="part part2">
-							<img class="part2-img" src=".//img/part2.jpg" alt="part2">
+							<img class="part-img" src=".//img/part2.jpg" alt="part2">
 							<div class="part-general">
 								<p class="title title-part">Overhaul</p>
 								<ul class="navigation part-navigation">
@@ -189,7 +190,7 @@
 							</div>
 						</div>
 						<div class="part part3">
-							<img class="part3-img" src=".//img/part3.jpg" alt="part1">
+							<img class="part-img" src=".//img/part3.jpg" alt="part1">
 							<div class="part-general">
 								<p class="title title-part">Designer Repair</p>
 								<ul class="navigation part-navigation">
@@ -261,41 +262,38 @@
 						cost of materials</p>
 				</div>
 			</section>
-			<section class="kinds">
-				<div class="background1">
-					<div class="container kinds-container">
-						<div class="kinds-content">
-							<div class="kinds-content-left">
-								<p class="title kinds-title">We realize your <br>
+			<section class="background1">
+				<div class="container kinds-container">
+					<div class="kinds-content">
+						<div class="kinds-content-left">
+							<p class="title kinds-title">We realize your <br>
 									wildest fantasies</p>
-								<ul class="kinds-navigation">
-									<li class="kinds-navigation__item">American classic</li>
-									<li class="kinds-navigation__item">Empire</li>
-									<li class="kinds-navigation__item">Classical</li>
-									<li class="kinds-navigation__item">Loft</li>
-									<li class="kinds-navigation__item">Minimalism</li>
-									<li class="kinds-navigation__item">Provence</li>
-									<li class="kinds-navigation__item">Romanticism</li>
-									<li class="kinds-navigation__item">Scandinavian style</li>
-									<li class="kinds-navigation__item">Mediterranean style</li>
-									<li class="kinds-navigation__item">High tech</li>
-									<li class="kinds-navigation__item">Eclecticism</li>
-								</ul>
-							</div>
-							<div class="column1">
-								<img class="one" src="./img/image 5.png">
-								<img class="one" src="./img/Mask Group.png">
-							</div>
-							<div class="column2">
-								<img class="one" src="./img/image 55.png">
-								<img class="one" src="./img/Mask Group1.png">
-							</div>
-
+							<ul class="kinds-navigation">
+								<li class="kinds-navigation__item">American classic</li>
+								<li class="kinds-navigation__item">Empire</li>
+								<li class="kinds-navigation__item">Classical</li>
+								<li class="kinds-navigation__item">Loft</li>
+								<li class="kinds-navigation__item">Minimalism</li>
+								<li class="kinds-navigation__item">Provence</li>
+								<li class="kinds-navigation__item">Romanticism</li>
+								<li class="kinds-navigation__item">Scandinavian style</li>
+								<li class="kinds-navigation__item">Mediterranean style</li>
+								<li class="kinds-navigation__item">High tech</li>
+								<li class="kinds-navigation__item">Eclecticism</li>
+							</ul>
+						</div>
+						<div class="column1">
+							<img class="one" src="./img/image 5.png">
+							<img class="one" src="./img/Mask Group.png">
+						</div>
+						<div class="column2">
+							<img class="one" src="./img/image 55.png">
+							<img class="one" src="./img/Mask Group1.png">
 						</div>
 					</div>
-					<div class="kinds-overlay">
-					</div>
 				</div>
+				<div class="kinds-overlay">
+				</div>				
 			</section>
 			<section class="review">
 				<div class="container reviews-container">
@@ -309,7 +307,7 @@
 						<div class="reviewsall">
 							<div class="personall">
 								<img src="./img/image 101.png" class="person" alt="foto1">
-								<p class="title title-person1">Fedosova Maria <br>
+								<p class="title title-person">Fedosova Maria <br>
 									Konstantinovna</p>
 							</div>
 							<p class="subtitle person-subtitle">I want to thank the guys for their work. We put your shower
@@ -325,7 +323,7 @@
 						<div class="reviewsall">
 							<div class="personall">
 								<img src="./img/image 102.png" class="person" alt="foto2">
-								<p class="title title-person2">Afanasyev Sergey <br> Alexandrovich</p>
+								<p class="title title-person">Afanasyev Sergey <br> Alexandrovich</p>
 							</div>
 							<p class="subtitle person-subtitle">I want to thank the guys for their work. We put your shower
 								part in repair. I
@@ -339,10 +337,10 @@
 								masters.</p>
 							<img src="./img/Group 202.png" class="buttonreview" alt="size2">
 						</div>
-						<div class="reviewsall">
+						<div class="reviewsall reviewsall1">
 							<div class="personall">
 								<img src="./img/image 103.png" class="person" alt="foto3">
-								<p class="title title-person3">Kiriev Egor <br> Leonidovich</p>
+								<p class="title title-person">Kiriev Egor <br> Leonidovich</p>
 							</div>
 							<p class="subtitle person-subtitle">I want to thank the guys for their work. We put your shower
 								part in repair. I
@@ -378,7 +376,7 @@
 							<label class="label-input label-input1 ">Email:</label>
 							<input class="name-input1" type="text" placeholder="Your email:">
 						</div>
-						<div class="tree-checkbox">
+						<div class="first-checkbox">
 							<label class="label">
 								<input type="checkbox" class="checkbox">
 								<span class="fake"></span>
